# stereo-charuco-3d-pipeline

./: .gitignore  CLAUDE.md  PIPELINE_SPEC.md  README.md  creat_script.txt  environment.yml
assets/docs/: raspberry_pi_migration_plan.md
tools/calib_record_tool/: pyproject.toml  requirements.txt
tools/calib_record_tool/configs/: default.yaml  yolov8_pose_wireframe.toml
tools/calib_record_tool/scripts/: _test_config.py  _test_full_pipeline.py  _test_intrinsic.py  convert_to_mp4.py  probe_camera.py  record_and_split.py  record_raw.py  run_calibration_ui.py  run_calibration_ui_advanced.py  run_pipeline_ui.py  run_unified.py  split_lr.py
tools/calib_record_tool/src/recorder/: __init__.py  auto_calibrate.py  calibration_ui.py  calibration_ui_advanced.py  camera.py  cli.py  config.py  fast_detect.py  ffmpeg.py  paths.py  pipeline_ui.py  project_manager.py  realtime_detector.py  smart_recorder.py  ui.py  videopose3d_lifter.py  viz_3d.py  yolov8_pose_tracker.py
tools/calib_record_tool/src/recorder/configs/: default.yaml
