[project]
name = "stereo-charuco-pipeline"
version = "0.2.2"
description = "Stereo ChArUco 3D motion capture pipeline with auto-calibration"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pyyaml>=6.0",
    "opencv-contrib-python>=4.8.0.74",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.1",
    "numba>=0.57.0",
    "pandas>=1.5.0",
    "mediapipe>=0.10.14",
    "pyside6-essentials>=6.10.1",
    "pyvista>=0.46.4",
    "pyvistaqt>=0.11.3",
    "rtoml>=0.9.0",
    "pyarrow>=15.0.0",
    "platformdirs>=4.3.8",
    "av>=16.0.0,<16.1.0",
]

[project.urls]
repository = "https://github.com/pythoner0921/stereo-charuco-3d-pipeline"

[project.optional-dependencies]
# caliscope must be installed from GitHub (PyPI version is outdated):
#   pip install git+https://github.com/mprib/caliscope.git
# This is listed here for documentation, not auto-installed.

[project.scripts]
stereo-pipeline = "recorder.cli:main"
stereo-calibrate = "recorder.cli:calibrate_only"
stereo-record = "recorder.cli:pipeline_only"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recorder"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
exclude = [
    "bin/**",
    "_test/**",
    "**/*.mp4",
    "**/*.avi",
]
