[project]
name = "stereo-charuco-pipeline"
version = "0.7.1"
description = "Stereo ChArUco 3D motion capture pipeline with auto-calibration"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pyyaml>=6.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.1",
    "numpy>=1.24,<2.4",
    "numba>=0.57.0",
    "pandas>=1.5.0",
    "mediapipe>=0.10.14",
    "pyside6-essentials>=6.5.0",
    "pyvista>=0.46.4",
    "pyvistaqt>=0.11.3",
    "rtoml>=0.9.0",
    "pyarrow>=15.0.0",
    "platformdirs>=4.3.8",
    "av>=16.0.0,<16.1.0",
    "ultralytics>=8.0.0",
    # opencv-contrib-python MUST be installed AFTER ultralytics.
    # ultralytics pulls in opencv-python which lacks cv2.aruco.
    # Fix: pip uninstall opencv-python opencv-python-headless -y
    #      pip install opencv-contrib-python>=4.8.0.74
    "opencv-contrib-python>=4.8.0.74",
    "onnxruntime>=1.16.0",
]

[project.urls]
repository = "https://github.com/pythoner0921/stereo-charuco-3d-pipeline"

[project.optional-dependencies]
# caliscope must be installed separately (PyPI version is outdated).
# Use our fork (pinned to commit 8dc0cd4e = v0.6.9):
#   pip install git+https://github.com/pythoner0921/caliscope.git@8dc0cd4e
# Or install from the local wheel backup:
#   pip install vendor/caliscope-0.6.9-py3-none-any.whl
videopose3d = ["torch>=2.0.0"]

[project.scripts]
stereo-pipeline = "recorder.cli:main"
stereo-calibrate = "recorder.cli:calibrate_only"
stereo-record = "recorder.cli:pipeline_only"
stereo-avi-test = "recorder.avi_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recorder"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
exclude = [
    "bin/**",
    "_test/**",
    "**/*.mp4",
    "**/*.avi",
]
